--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,8 @@
     "firebase": "^5.8.3",
     "firebase-admin": "^7.0.0",
     "firebase-functions": "^2.2.0",
-    "handlebars": "^4.1.0"
+    "handlebars": "^4.1.0",
+    "jsonwebtoken": "^8.5.0"
   },
   "private": true
 }
