--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,7 @@
     "firebase": "^5.8.5",
     "firebase-admin": "^7.0.0",
     "firebase-functions": "^2.2.0",
+    "grpc": "^1.19.0",
     "handlebars": "^4.1.0",
     "jsonwebtoken": "^8.5.0"
   },
