Fixed firestore problem, wrote APIs for managing OneDrive log-in and sign-out, checking if user has a token, deleting token if it has expired and more.

--- a/functions/package.json
+++ b/functions/package.json
@@ -9,6 +9,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@microsoft/microsoft-graph-client": "^1.5.2",
     "ajax": "0.0.4",
     "consolidate": "^0.15.1",
     "cookie": "^0.3.1",
