--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "handlebars": "^4.1.0",
     "isomorphic-fetch": "^2.2.1",
     "pcloud-sdk-js": "^1.4.3",
+    "sweetalert": "^2.1.2",
     "whatwg-fetch": "^3.0.0"
   },
   "private": true
